Add AWS Lambda handler and Dockerfile for java-book-api